# VictorNet

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  flake.nix
docker/: dockerfile
src/: MainApplication.cpp  MainApplication.cu
src/cnn/: CNN.hpp  ConvolutionalLayer.cpp  ConvolutionalLayer.hpp
src/cnn/layers/: BaseLayer.hpp  ConvolutionalLayer.cpp  ConvolutionalLayer.hpp  MaxPoolingLayer.cpp  MaxPoolingLayer.hpp
src/core/: Tensor.cpp  Tensor.hpp
src/core/device/: CudaObject.cu  CudaObject.hpp  CudaTensor.cpp  CudaTensor.hpp  DeviceTensor.hpp  IDeviceStorable.hpp
src/kernels/: Conv3D.cu  Conv3D.hpp  MaxPooling.cu  MaxPooling.hpp
src/tests/: CPUConv.cpp  TestDeviceMemory.cu  TestDeviceMemory.hpp
src/tokens/: CudaObject.cu  Tensor.cpp  Tensor.hpp
src/tokens/stb_image/: stb_image_write.h
src/utils/: GaussianInitializer.hpp  IKernelWeightProvider.hpp  KaimingInitializer.hpp
